# primary-algorithm

./: README.md
Classical-Algorithm/: README.md
Classical-Algorithm/BubbleSelectInsertSort/: README.md
Classical-Algorithm/Fibonacci/: README.md
Classical-Algorithm/HanoiTower/: README.md
Classical-Algorithm/N-queen Problem/: README.md
Classical-Algorithm/Sudoku/: README.md
Classical-Algorithm/quick_sort/: README.md  SortTestHelper.md
LeetCode/: README.md
LeetCode/C- project/: BackTrackingHelper.md  DesignHelper.md  DynamicProgrammingHelper.md  GraphHelper.md  ListHelper.md  README.md  StringHelper.md  TreeHelper.md  VectorHelper.md  mathHelper.md
LeetCode/C- project/Linux-CMake/: BackTrackingHelper.h  CMakeLists.txt  DynamicProgrammingHelper.h  GraphHelper.h  ListHelper.h  README.md  StringHelper.h  TreeHelper.h  VectorHelper.h  designHelper.h  main.cpp  mathHelper.h
LeetCode/ValuableHP/: 126_WordLadderII.md  65_Valid Number.md  README.md
LeetCode/python/: 10_Regular Expression Matching.py  11_ContainerWater.py  12_integerToRoman.py  13_RomanTointeger.py  14_Longest Common Prefix.py  15_3sum.py  16_3sumCloest.py  17_Letter Combinations of a Phone Number.py  18_4sum.py  19_Remove Nth Node From End of List.py  1_twosum.py  20_Valid Parentheses.py  2_addTwoNumbers.py  3_find_lensubstr.py  44_Wildcard Matching.py  4_findkth.py  5_findLongest_huiwenSubstring.py  6_ZigZag Conversion.py  7_Reverse Integer.py  8_str2int.py  9_Palindrome number.py  README.md
jobs/: README.md
leetcode/: README.md
simple data structure/: README.md
(+30 files in other folders)
